Major Style Changes

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -9,6 +9,14 @@
 @import 'resets';
 @import 'variables';
 @import 'mixins';
+
+@import 'nav';
+@import 'header';
+@import 'projects';
+@import 'information';
+@import 'contact';
+@import 'footer';
+
 @import 'loader';
 @import 'switch';
 
@@ -32,484 +40,4 @@ body {
 
 span {
     color: $primary-color;
-}
-
-
-@include mobile {
-    nav {
-
-        padding: 50px 20px;
-        font-weight: weight(bold);
-
-        ul {
-            list-style: none;
-        }
-
-        a {
-            text-decoration: none;
-        }
-
-        .logo {
-            text-transform: uppercase;
-            font-weight: weight(bold);
-            font-size: size(medium);
-            color: white;
-            margin-right: 20px;
-            padding: 10px;
-            background: $primary-color;
-        }
-
-        span.text {
-            color: $font-color;
-            position: absolute;
-            transform: translateY(10px);
-        }
-
-        .contact {
-            transform: translateY(-30px);
-            float: right;
-            display: none;
-        }
-    }
-
-    header {
-        min-height: 70vh;
-        padding: 1% 20px;
-
-        h1 {
-            font-size: size(big);
-            margin-bottom: 20%;
-        }
-
-        a {
-            text-decoration: none;
-            border: 2px solid $primary-color;
-            font-size: 1.2rem;
-            padding: 10px 20px;
-            color: $primary-color;
-            font-weight: weight(medium);
-            @include transition;
-
-            i {
-                font-size: 1rem;
-                margin-left: 10px;
-                color: $primary-color;
-                @include transition;
-            }
-
-            &:hover {
-                background: $primary-color;
-                color: white;
-                text-decoration: none;
-                border: 2px solid $primary-color;
-
-                i {
-                    color: white;
-                    transform: rotate(90deg);
-                }
-            }
-        }
-    }
-
-    #information {
-        padding:0 20px;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: left;
-        flex-direction: column;
-        align-content: center;
-        min-height: 100vh;
-
-        .left {
-            font-size: size(big);
-            font-weight: weight(bold);
-            margin-right: 0%;
-            // border: 1px solid white;
-        }
-
-        .right {
-            width: 100%;
-            font-size: 1.4rem;
-            padding-top: 2%;
-            // border: 1px solid white;
-        }
-
-        .img_container {
-
-            overflow: hidden;
-            border-radius: 500px;
-            height: 250px;
-            width: 250px;
-            display: block;
-            margin: 50px auto;
-            transform: translateY(10%);
-
-            img {
-                width: 150%;
-                height: auto;
-                transform: translateX(-30px);
-            }
-        }
-    }
-
-    #languages {
-        padding: 30px 20px;
-        font-size: size(big);
-        display: flex;
-        flex-wrap: wrap;
-
-        justify-content: space-evenly;
-        i{
-            margin: 20px;
-        }
-    }
-
-    #projects {
-        min-height: 100vh;
-        padding: 50px 20px;
-        display: flex;
-        flex-wrap: wrap;
-        align-content: center;
-        justify-content: space-around;
-
-        .left {
-            font-size: 2rem;
-            font-weight: weight(bold);
-            margin-right: 0%;
-            width: 100%;
-        }
-
-
-        .right {
-            width: 100%;
-            
-            .card_container {
-                display: block;
-                margin: 30px auto;
-                text-align: center;
-                transform: translateX(0px);
-    
-                .card {
-                    background: white;
-                    border: 0;
-                    @include border-radius;
-                    @include box-shadow;
-                    padding: 30px 40px;
-                    text-align: center;
-                    width: 100%;
-                    margin-bottom: 30px;
-                    // height: 250px;
-                    // width: 90;
-    
-                    .title {
-                        .logo {
-                            height: auto;
-                            width: 40px;
-                            display: inline-block;
-                            margin-right: 20px;
-                            transform: translateY(13px);
-                        }
-    
-                        h4 {
-                            display: inline-block;
-                            color: $font-color;
-                        }
-                        margin-bottom: 30px;
-                    }
-    
-                    p {
-                        color: $font-color;
-                        margin-bottom: 10px;
-                    }
-    
-                    a.link {
-                        color: $primary-color;
-                        font-weight: bold;
-                        text-decoration: none;
-    
-                        &:hover {
-                            text-decoration: none;
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    #contact {
-        padding: 0px 20px;
-        display: flex;
-        flex-wrap: wrap;
-        align-content: center;
-        text-align: center;
-        justify-content: center;
-
-        h1 {
-            font-size: size(medium);
-            margin-bottom: 10px;
-        }
-
-        .social-media{
-
-            .linkedin{
-                transform: translateX(2px);
-            }
-
-            i{
-                font-size: size(big);
-                @include transition;
-                margin: 20px auto;
-                &:hover {
-                    color: $primary-color;
-                }
-            }
-        }
-    }
-
-    #footer {
-        text-transform: uppercase;
-        text-align: center;
-        font-weight: weight(bold);
-        padding: 30px;
-        letter-spacing: 10px;
-    }
-}
-
-@include desktop {
-
-    nav {
-
-        padding: 50px 80px 50px 50px;
-        font-weight: weight(bold);
-
-        ul {
-            list-style: none;
-        }
-
-        a {
-            text-decoration: none;
-        }
-
-        .logo {
-            text-transform: uppercase;
-            font-weight: weight(bold);
-            font-size: size(medium);
-            color: white;
-            margin-right: 20px;
-            padding: 10px;
-            background: $primary-color;
-        }
-
-        span.text {
-            color: $font-color;
-            position: absolute;
-            transform: translateY(10px);
-        }
-
-        .contact {
-            transform: translateY(-30px);
-            float: right;
-            display: block;
-        }
-    }
-
-    header {
-        min-height: 70vh;
-        padding: 10% 50px;
-
-        h1 {
-            font-size: size(bigger);
-            margin-bottom: 5%;
-        }
-
-        a {
-            text-decoration: none;
-            border: 2px solid $primary-color;
-            font-size: 1.2rem;
-            padding: 10px 20px;
-            color: $primary-color;
-            font-weight: weight(medium);
-            @include transition;
-
-            i {
-                font-size: 1rem;
-                margin-left: 10px;
-                color: $primary-color;
-                @include transition;
-            }
-
-            &:hover {
-                background: $primary-color;
-                color: white;
-                text-decoration: none;
-                border: 2px solid $primary-color;
-
-                i {
-                    color: white;
-                    transform: rotate(90deg);
-                }
-            }
-        }
-    }
-
-    #information {
-        padding: 50px;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: left;
-        align-content: center;
-        min-height: 100vh;
-
-        .left {
-            font-size: size(bigger);
-            font-weight: weight(bold);
-            margin-right: 5%;
-            // border: 1px solid white;
-        }
-
-        .right {
-            width: 40%;
-            font-size: size(medium);
-            padding-top: 2%;
-            // border: 1px solid white;
-        }
-
-        .img_container {
-
-            overflow: hidden;
-            border-radius: 500px;
-            height: 300px;
-            width: 300px;
-            display: block;
-            margin: 20px auto;
-            transform: translateY(10%);
-
-            img {
-                width: 150%;
-                height: auto;
-                transform: translateX(-30px);
-            }
-        }
-    }
-
-    #languages {
-        padding: 30px 50px;
-        font-size: size(big);
-        display: flex;
-        justify-content: space-around;
-        i{
-            margin-right: 2%;
-        }
-    }
-
-    #projects {
-        min-height: 100vh;
-        padding: 50px;
-        display: flex;
-        flex-flow: row;
-        align-content: center;
-        justify-content: space-around;
-
-        .left {
-            font-size: 3.5rem;
-            font-weight: weight(bold);
-            margin-right: 5%;
-            width: 100%;
-        }
-
-
-        .right {
-            width: 80%;
-            
-            .card_container {
-                display: block;
-                margin: 30px auto;
-                text-align: center;
-                transform: translateX(50px);
-    
-                .card {
-                    background: white;
-                    border: 0;
-                    @include border-radius;
-                    @include box-shadow;
-                    padding: 30px 40px;
-                    text-align: center;
-                    width: 100%;
-                    margin-bottom: 30px;
-                    // height: 250px;
-                    width: 300px;
-    
-                    .title {
-                        .logo {
-                            height: auto;
-                            width: 40px;
-                            display: inline-block;
-                            margin-right: 20px;
-                            transform: translateY(13px);
-                        }
-    
-                        h4 {
-                            display: inline-block;
-                            color: $font-color;
-                        }
-                        margin-bottom: 30px;
-                    }
-    
-                    p {
-                        color: $font-color;
-                        margin-bottom: 10px;
-                    }
-    
-                    a.link {
-                        color: $primary-color;
-                        font-weight: bold;
-                        text-decoration: none;
-    
-                        &:hover {
-                            text-decoration: none;
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    #contact {
-        padding: 0px 50px;
-        display: flex;
-        align-content: center;
-        
-
-        h1 {
-            font-size: size(big);
-            margin-bottom: 10px;
-            text-align: left;
-        }
-
-        .social-media{
-            margin-left: 20%;
-
-            .linkedin{
-                transform: translateX(2px);
-            }
-
-            i{
-                font-size: size(big);
-                @include transition;
-                margin: 20px auto;
-                &:hover {
-                    color: $primary-color;
-                }
-            }
-        }
-    }
-
-    #footer {
-        text-transform: uppercase;
-        text-align: center;
-        font-weight: weight(bold);
-        padding: 30px;
-        letter-spacing: 10px;
-    }
 }
