--- a/src/css/_projects.scss
+++ b/src/css/_projects.scss
@@ -1,220 +1,218 @@
 @include mobile {
-    #projects {
-        // min-height: 100vh;
-        padding: 0px;
-        padding-top: 15%;
-        display: flex;
-        flex-flow: column wrap;
-        align-content: center;
-        justify-content: space-evenly;
-        // position: fixed;
-        // z-index: 97;
-        // bottom: -100%;
-        width: 100%;
-        // background: white;
+  #projects {
+    // min-height: 100vh;
+    padding: 0px;
+    padding-top: 15%;
+    display: flex;
+    flex-flow: column wrap;
+    align-content: center;
+    justify-content: space-evenly;
+    // position: fixed;
+    // z-index: 97;
+    // bottom: -100%;
+    width: 100%;
+    // background: white;
 
-        .left {
-            font-size: 2vh;
-            font-weight: weight(bold);
-            // padding: 20px;
-            padding: 50px 0px 50px 40px;
-            box-shadow: -17px 0 10px -15px rgba(0,0,0,0.4);
-            // width: 100%;
-            text-align: left;
-            margin-left: 5%;
-        }
-
-
-        .right {
-            display: flex;
-            flex-flow: row wrap;
-            align-content: center;
-            box-shadow: -17px 0 10px -15px rgba(0,0,0,0.4);
-            margin-left: 5%;
-            // width: 50%;
-            padding: 2% 5%;
-
-            .card_container {
-                margin: 10px auto ;
-                text-align: center;
-                display: inline-block;
-                height: auto;
-                width: 100%;
-                @include border-radius;
-                @include box-shadow;
-                overflow: hidden;
-                position: relative;
-
-                .card {
-                    // background: white;
-                    text-align: center;
-                    overflow: auto;
-
-                    .title {
-                        padding: 10px 13px 13px 13px;
-                        overflow: hidden;
-                        text-align: center;
-                        background: $secondary-color;
-
-                        .logo {
-                            height: auto;
-                            width: 8%;
-                            display: inline-block;
-                            margin-right: 10px;
-                            transform: translateY(7px);
-                        }
-
-                        h4 {
-                            display: inline-block;
-                            color: white;
-                        }
-
-                        margin-bottom: 30px;
-                    }
-
-                    p {
-                        padding: 0 13px;
-                        color: $font-color;
-                        margin-bottom: 10px;
-                        display: block;
-                    }
-
-                    a.link {
-                        transform: translateY(-20px);
-                        margin: 35px auto;
-                        display: block;
-                        color: $primary-color;
-                        font-weight: bold;
-                        text-decoration: underline;
-
-                        &:hover {
-                            text-decoration: none;
-                        }
-                    }
-
-                    .footer {
-                        font-weight: normal;
-                        text-align: center;
-                        color: $font-color;
-                        display: flex;
-                        justify-content: space-evenly;
-                        padding: 10px;
-                        font-size: 1.2rem;
-                        position: absolute;
-                        bottom: 0;
-                        width: 100%;
-                        background: rgb(240,240,240);
-                    }
-                }
-            }
-        }
+    .left {
+      font-size: 2vh;
+      font-weight: weight(bold);
+      // padding: 20px;
+      padding: 50px 0px 50px 40px;
+      box-shadow: -17px 0 10px -15px rgba(0, 0, 0, 0.4);
+      // width: 100%;
+      text-align: left;
+      margin-left: 5%;
     }
+
+    .right {
+      display: flex;
+      flex-flow: row wrap;
+      align-content: center;
+      box-shadow: -17px 0 10px -15px rgba(0, 0, 0, 0.4);
+      margin-left: 5%;
+      // width: 50%;
+      padding: 2% 5%;
+
+      .card_container {
+        margin: 10px auto;
+        text-align: center;
+        display: inline-block;
+        height: auto;
+        width: 100%;
+        @include border-radius;
+        @include box-shadow;
+        overflow: hidden;
+        position: relative;
+
+        .card {
+          // background: white;
+          text-align: center;
+          overflow: auto;
+
+          .title {
+            padding: 10px 13px 13px 13px;
+            overflow: hidden;
+            text-align: center;
+            background: $secondary-color;
+
+            .logo {
+              height: auto;
+              width: 8%;
+              display: inline-block;
+              margin-right: 10px;
+              transform: translateY(7px);
+            }
+
+            h4 {
+              display: inline-block;
+              color: white;
+            }
+
+            margin-bottom: 30px;
+          }
+
+          p {
+            padding: 0 13px;
+            color: var(--font-color);
+            margin-bottom: 10px;
+            display: block;
+          }
+
+          a.link {
+            transform: translateY(-20px);
+            margin: 35px auto;
+            display: block;
+            color: $primary-color;
+            font-weight: bold;
+            text-decoration: underline;
+
+            &:hover {
+              text-decoration: none;
+            }
+          }
+
+          .footer {
+            font-weight: normal;
+            text-align: center;
+            color: var(--font-color);
+            display: flex;
+            justify-content: space-evenly;
+            padding: 10px;
+            font-size: 1.2rem;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            background: rgb(240, 240, 240);
+          }
+        }
+      }
+    }
+  }
 }
 @include desktop {
-    #projects {
-        // min-height: 100vh;
-        padding: 0px;
-        padding-top: 0;
-        display: flex;
-        flex-flow: row wrap;
-        align-content: center;
-        justify-content: space-evenly;
-        // position: fixed;
-        // z-index: 97;
-        // bottom: -100%;
-        width: 100%;
-        // background: white;
+  #projects {
+    // min-height: 100vh;
+    padding: 0px;
+    padding-top: 0;
+    display: flex;
+    flex-flow: row wrap;
+    align-content: center;
+    justify-content: space-evenly;
+    // position: fixed;
+    // z-index: 97;
+    // bottom: -100%;
+    width: 100%;
+    // background: white;
 
-        .left {
-            font-size: 6vh;
-            font-weight: weight(bold);
-            padding: 50px 0px 50px 40px;
-            width: 42%;
-            text-align: left;
-            margin-left: 8%;
-        }
-
-
-        .right {
-            display: flex;
-            flex-flow: row wrap;
-            align-content: center;
-            width: 50%;
-            margin: 0;
-            box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.0);
-            padding-right: 4%;
-
-            .card_container {
-                margin: 30px auto;
-                text-align: center;
-                display: inline-block;
-                height: 200px;
-                width: 250px;
-                @include border-radius;
-                @include box-shadow;
-                overflow: hidden;
-                position: relative;
-                background: white;
-                .card {
-                    text-align: center;
-
-                    .title {
-                        padding: 10px 13px 13px 13px;
-                        overflow: hidden;
-                        text-align: center;
-                        background: $secondary-color;
-
-                        .logo {
-                            height: auto;
-                            width: 10%;
-                            display: inline-block;
-                            margin-right: 10px;
-                            transform: translateY(4px);
-                        }
-
-                        h4 {
-                            display: inline-block;
-                            color: white;
-                        }
-
-                        margin-bottom: 30px;
-                    }
-
-                    p {
-                        display: block;
-                        padding: 0 13px;
-                        color: $font-color;
-                        margin-bottom: 10px;
-                    }
-
-                    a.link {
-                        margin: 0;
-                        transform: translateY(0);
-                        color: $primary-color;
-                        font-weight: bold;
-                        text-decoration: none;
-
-                        &:hover {
-                            text-decoration: none;
-                        }
-                    }
-
-                    .footer {
-                        font-weight: normal;
-                        text-align: center;
-                        color: $font-color;
-                        display: flex;
-                        justify-content: space-evenly;
-                        align-content: center;
-                        font-size: 1.2rem;
-                        position: absolute;
-                        bottom: 0;
-                        width: 100%;
-                        padding: 10px;
-                        background: rgb(240, 240, 240);
-                    }
-                }
-            }
-        }
+    .left {
+      font-size: 6vh;
+      font-weight: weight(bold);
+      padding: 50px 0px 50px 40px;
+      width: 42%;
+      text-align: left;
+      margin-left: 8%;
     }
+
+    .right {
+      display: flex;
+      flex-flow: row wrap;
+      align-content: center;
+      width: 50%;
+      margin: 0;
+      box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+      padding-right: 4%;
+
+      .card_container {
+        margin: 30px auto;
+        text-align: center;
+        display: inline-block;
+        height: 200px;
+        width: 250px;
+        @include border-radius;
+        @include box-shadow;
+        overflow: hidden;
+        position: relative;
+        background: white;
+        .card {
+          text-align: center;
+
+          .title {
+            padding: 10px 13px 13px 13px;
+            overflow: hidden;
+            text-align: center;
+            background: $secondary-color;
+
+            .logo {
+              height: auto;
+              width: 10%;
+              display: inline-block;
+              margin-right: 10px;
+              transform: translateY(4px);
+            }
+
+            h4 {
+              display: inline-block;
+              color: white;
+            }
+
+            margin-bottom: 30px;
+          }
+
+          p {
+            display: block;
+            padding: 0 13px;
+            color: var(--font-color);
+            margin-bottom: 10px;
+          }
+
+          a.link {
+            margin: 0;
+            transform: translateY(0);
+            color: $primary-color;
+            font-weight: bold;
+            text-decoration: none;
+
+            &:hover {
+              text-decoration: none;
+            }
+          }
+
+          .footer {
+            font-weight: normal;
+            text-align: center;
+            color: var(--font-color);
+            display: flex;
+            justify-content: space-evenly;
+            align-content: center;
+            font-size: 1.2rem;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            padding: 10px;
+            background: rgb(240, 240, 240);
+          }
+        }
+      }
+    }
+  }
 }
